--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
 }
 .body {
     margin: 25% 25%;
+    
 }
 td{
     border: 0.5px solid black ;
@@ -36,3 +37,8 @@ span{
     font-size: 30px;
     align-items: center;
 }
+@media only screen and (min-width: 800px) {
+    .body { width: 350px!important;
+      
+    }
+  }
